--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "heroku-postbuild": "ng build --aot -prod",
-    "start": "node server.js"
+    "start": "node server.js",
+    "install": "npm install --force"
   },
   "private": true,
   "dependencies": {
